working with hero page

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                     We Help you
                     <span>to grow your Business</span>
                 </h1>
+                <p class="hero__Desc">
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a type specimen book.
+                </p>
+                <button type="button" class="btn-primary hero__btn">Get Started</button>
             </div>
         </section>
     </body>
