update header and complte hero page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                 </p>
                 <button type="button" class="btn-primary hero__btn">Get Started</button>
             </div>
+            <div class="hero__img">
+                <img src="assets/images/hero.png" alt="" />
+            </div>
         </section>
     </body>
 </html>
